Fixed issues with not including string in ShaderProgramLinker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,7 @@ INCLUDE_DIRECTORIES(
 SET(SCE_VECTORMATH_PATH "")
 
 ADD_EXECUTABLE(Test src/Main.cpp src/glad.c src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)
-TARGET_LINK_LIBRARIES(Test glfw ${CMAKE_DL_LIBS})
+ADD_LIBRARY(mygl src/glad.c src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)
+
+TARGET_LINK_LIBRARIES(mygl glfw ${CMAKE_DL_LIBS} -std=c++17)
+TARGET_LINK_LIBRARIES(Test glfw ${CMAKE_DL_LIBS} -std=c++17)
