Reorganised demo files & CMake lists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12.1)
 
 SET(CMAKE_CXX_STANDARD 17)
 PROJECT(Phelsuma)
+set(CMAKE_BUILD_TYPE Debug)
 
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 REQUIRED)
@@ -13,8 +14,10 @@ INCLUDE_DIRECTORIES(
 
 SET(SCE_VECTORMATH_PATH "")
 
-ADD_EXECUTABLE(Test src/Main.cpp src/glad.c src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)
-ADD_LIBRARY(mygl src/glad.c src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)
+SET(ENGINE_CPPFILES src/glad.c src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)
 
-TARGET_LINK_LIBRARIES(mygl glfw ${CMAKE_DL_LIBS} -std=c++17)
-TARGET_LINK_LIBRARIES(Test glfw ${CMAKE_DL_LIBS} -std=c++17)
+ADD_EXECUTABLE(ColoredTexTriangle src/ColoredTexTriangle/Main.cpp ${ENGINE_CPPFILES})
+ADD_EXECUTABLE(PointCloud3D src/PointCloud3D/Main.cpp ${ENGINE_CPPFILES})
+
+TARGET_LINK_LIBRARIES(ColoredTexTriangle glfw ${CMAKE_DL_LIBS})
+TARGET_LINK_LIBRARIES(PointCloud3D glfw ${CMAKE_DL_LIBS})
