Checking if variables are defined in CMake before setting them up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,17 @@ INCLUDE_DIRECTORIES(
   ${PHELSUMA_SCE_VECTORMATH_PATH}
 )
 
-OPTION(PHELSUMA_BUILD_EXAMPLES ON)
+IF(NOT DEFINED(PHELSUMA_BUILD_EXAMPLES))
+  OPTION(PHELSUMA_BUILD_EXAMPLES ON)
+ENDIF()
 
-SET(PHELSUMA_GLAD_SRC_PATH src/glad.c)
-SET(PHELSUMA_SCE_VECTORMATH_PATH "")
+IF(NOT DEFINED(PHELSUMA_GLAD_SRC_PATH))
+  SET(PHELSUMA_GLAD_SRC_PATH src/glad.c)
+ENDIF()
+
+IF(NOT DEFINED(PHELSUMA_SCE_VECTORMATH_PATH))
+  SET(PHELSUMA_SCE_VECTORMATH_PATH "")
+ENDIF()
 
 SET(ENGINE_CPPFILES ${PHELSUMA_GLAD_SRC_PATH} src/ShaderCompiler.cpp src/ShaderProgramLinker.cpp src/ShaderProgram.cpp src/Shader.cpp)
 
