Wrong use of DEFINED in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,15 @@ INCLUDE_DIRECTORIES(
   ${PHELSUMA_SCE_VECTORMATH_PATH}
 )
 
-IF(NOT DEFINED(PHELSUMA_BUILD_EXAMPLES))
+IF(NOT PHELSUMA_BUILD_EXAMPLES)
   OPTION(PHELSUMA_BUILD_EXAMPLES ON)
 ENDIF()
 
-IF(NOT DEFINED(PHELSUMA_GLAD_SRC_PATH))
+IF(NOT PHELSUMA_GLAD_SRC_PATH)
   SET(PHELSUMA_GLAD_SRC_PATH src/glad.c)
 ENDIF()
 
-IF(NOT DEFINED(PHELSUMA_SCE_VECTORMATH_PATH))
+IF(NOT PHELSUMA_SCE_VECTORMATH_PATH)
   SET(PHELSUMA_SCE_VECTORMATH_PATH "")
 ENDIF()
 
