fixed issue with BUILD_EXAMPLES option being ignored due to wrong arguments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ INCLUDE_DIRECTORIES(
 )
 
 IF(NOT PHELSUMA_BUILD_EXAMPLES)
-  OPTION(PHELSUMA_BUILD_EXAMPLES ON)
+  OPTION(PHELSUMA_BUILD_EXAMPLES "Build included examples" ON)
 ENDIF()
 
 IF(NOT PHELSUMA_GLAD_SRC_PATH)
