Implemented Phong lighting shaders & rotating box implementation with testing texturesets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,10 @@ IF (PHELSUMA_BUILD_EXAMPLES)
   ADD_EXECUTABLE(ColoredTexTriangle src/ColoredTexTriangle/Main.cpp)
   ADD_EXECUTABLE(PointCloud3D src/PointCloud3D/Main.cpp)
   ADD_EXECUTABLE(RotatingBox src/RotatingBox/Main.cpp)
+  ADD_EXECUTABLE(LightingBoxes src/LightingBoxes/Main.cpp)
+
   TARGET_LINK_LIBRARIES(ColoredTexTriangle glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
   TARGET_LINK_LIBRARIES(PointCloud3D glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
   TARGET_LINK_LIBRARIES(RotatingBox glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
+  TARGET_LINK_LIBRARIES(LightingBoxes glfw ${PROJECT_NAME} ${CMAKE_DL_LIBS})
 ENDIF()
